// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneEmulator should be able to render without a toolbar 1`] = `
<div
  class="md-paper md-paper--1 phone-emulator md-background"
>
  <header
    class="phone-emulator__status-bar"
  >
    <i
      class="md-icon material-icons"
    >
      network_wifi
    </i>
    <i
      class="md-icon material-icons"
    >
      network_cell
    </i>
    <i
      class="md-icon material-icons"
    >
      battery_full
    </i>
    <span
      class="phone-emulator__status-bar__time"
    >
      12:30
    </span>
  </header>
  <section
    class="phone-emulator__content"
  >
    <h2>
      This is some content that should appear in the phone emulator!
    </h2>
  </section>
</div>
`;

exports[`PhoneEmulator should render correctly with the base required props 1`] = `
<div
  class="md-paper md-paper--1 phone-emulator md-background"
>
  <header
    class="phone-emulator__status-bar"
  >
    <i
      class="md-icon material-icons"
    >
      network_wifi
    </i>
    <i
      class="md-icon material-icons"
    >
      network_cell
    </i>
    <i
      class="md-icon material-icons"
    >
      battery_full
    </i>
    <span
      class="phone-emulator__status-bar__time"
    >
      12:30
    </span>
  </header>
  <header
    class="md-paper md-paper--2 md-toolbar md-background--primary md-toolbar--text-white md-toolbar--fixed phone-emulator__toolbar"
  >
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block md-btn--toolbar md-toolbar--action-left"
      type="button"
    >
      <div
        class="md-ink-container"
      />
      <i
        class="md-icon material-icons md-text--inherit"
      >
        menu
      </i>
    </button>
    <h2
      class="md-title md-title--toolbar"
    >
      Title
    </h2>
  </header>
  <section
    class="phone-emulator__content phone-emulator__content--offset"
  >
    <h2>
      This is some content that should appear in the phone emulator!
    </h2>
  </section>
</div>
`;

exports[`PhoneEmulator should render correctly with the base required props 2`] = `
<div
  class="md-paper md-paper--0 phone-emulator md-background"
>
  <header
    class="md-paper md-paper--2 md-toolbar md-background--primary md-toolbar--text-white md-toolbar--fixed phone-emulator__toolbar"
  >
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block md-btn--toolbar md-toolbar--action-left"
      type="button"
    >
      <div
        class="md-ink-container"
      />
      <i
        class="md-icon material-icons md-text--inherit"
      >
        menu
      </i>
    </button>
    <h2
      class="md-title md-title--toolbar"
    >
      Title
    </h2>
  </header>
  <section
    class="phone-emulator__content phone-emulator__content--offset"
  >
    <h2>
      This is some content that should appear in the phone emulator!
    </h2>
  </section>
</div>
`;

exports[`PhoneEmulator should render only the children if mobileOnly is provided and not mobile 1`] = `
<h2>
  This is some content that should appear in the phone emulator!
</h2>
`;

exports[`PhoneEmulator should render only the children if mobileOnly is provided and not mobile 2`] = `
<section>
  <div>
    Line 1
  </div>
  <div>
    Line 2
  </div>
</section>
`;
